--- a/packages/framework-vue/package.json
+++ b/packages/framework-vue/package.json
@@ -1,9 +1,12 @@
 {
-  "version": "0.0.0",
+  "version": "0.1.0-beta.0",
   "name": "@ream/framework-vue",
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "dist/index.mjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -11,20 +14,20 @@
     "dev": "rm -rf dist && rollup -c --watch",
     "build": "rm -rf dist && rollup -c"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@vue/server-renderer": "^3.0.7",
     "ream": "workspace:*",
     "vue": "^3.0.7"
   },
-  "peerDependencies": {
-    "ream": "workspace:*"
-  },
   "devDependencies": {
     "@egoist/rollup-plugin-ts-resolve": "^0.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
+    "@vue/server-renderer": "^3.0.7",
     "@vueuse/head": "^0.5.1",
+    "ream": "workspace:*",
     "rollup": "^2.42.1",
     "rollup-plugin-esbuild": "^3.0.2",
+    "vue": "^3.0.7",
     "vue-router": "^4.0.5"
   }
 }
