--- a/packages/create-ream-app/package.json
+++ b/packages/create-ream-app/package.json
@@ -1,8 +1,8 @@
 {
   "name": "create-ream-app",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.4",
   "files": [
-    "template",
+    "templates",
     "lib"
   ],
   "bin": "lib/cli.js",
