--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -55,11 +55,10 @@
     "@types/debug": "^4.1.5",
     "@types/fs-extra": "9.0.7",
     "@types/hash-sum": "1.0.0",
-    "@types/memory-fs": "^0.3.3",
     "@types/node": "14.14.31",
     "@types/serialize-javascript": "^5.0.0",
     "@vueuse/head": "^0.5.1",
-    "memory-fs": "^0.5.0",
+    "memfs": "^3.2.0",
     "mitt": "^2.1.0",
     "ts-essentials": "^7.0.1",
     "vue-router": "^4.0.3"
